# wfc

./: CMakeLists.txt  LICENSE.txt  README.md  config-version.cmake.in  config.cmake.in  main.cpp
include/: wfc.hpp
source/: wfc.cpp
